--- a/handwritten_digit_recognition.ipynb
+++ b/handwritten_digit_recognition.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyP3rveJU5UZduezOXb5EoOK",
+      "authorship_tag": "ABX9TyPcgojEMMjq3ytWETgMb+ce",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -867,6 +867,18 @@
       "source": [],
       "metadata": {
         "id": "d4H3f3GLtOZG"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Excelling digits (1, 3, 7) are likely easier for the model due to their distinct shapes and clear features.\n",
+        "# Struggling digits (8, 9, 5) share overlapping visual characteristics (e.g., loops, curves), making them harder for the model to differentiate."
+      ],
+      "metadata": {
+        "id": "gPfwYw0pGmOm"
       },
       "execution_count": null,
       "outputs": []
